[DATALAB-2090]: Fixed sticky footer on audit/billing on safari

--- a/services/self-service/src/main/resources/webapp/src/assets/styles/_general.scss
+++ b/services/self-service/src/main/resources/webapp/src/assets/styles/_general.scss
@@ -187,7 +187,7 @@ input[type=file]::-webkit-file-upload-button {
   position: absolute;
   display: flex;
   justify-content: space-around;
-  z-index: 10;
+  z-index: 102;
   bottom: 9px;
   left: 0;
   right: 0;
