--- a/services/self-service/src/main/resources/webapp/src/assets/styles/_theme.scss
+++ b/services/self-service/src/main/resources/webapp/src/assets/styles/_theme.scss
@@ -986,5 +986,15 @@ mat-progress-bar {
 
 .alert .highlight .strong{ color: #35afd5}
 
+.audit-table-wrapper,
+.billing-page-wrapper{
+  tfoot{
+    position: sticky;
+    z-index: 101;
+    bottom: 0;
+  }
+}
+
+
 
 
